--- a/How_to_Access_Data_Lab_Services_From_Web_Apps.ipynb
+++ b/How_to_Access_Data_Lab_Services_From_Web_Apps.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "## How to use Data Lab Services From Web Apps\n",
     "\n",
-    "*Revised:  May 17, 2017*\n",
+    "*Revised:  May 23, 2017*\n",
     "\n",
     "This notebook documents how to call the various Data Lab services (e.g. AuthManager, QueryManager, etc) from Web applications by directly accessing the service URL.  It will explain which arguments are required, when an authorization token is required, the return value of the service (and how it might change depending on the arguments or auth token) and how errors may be trapped.  Unless otherwise noted, all specified arguments are required for each service.\n",
     "\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -33,10 +33,10 @@
     "import os, sys\n",
     "\n",
     "# Define the base service URLs\n",
-    "AUTH    = \"http://dldev.datalab.noao.edu/auth\"           # Auth Manager\n",
-    "QUERY   = \"http://dldev.datalab.noao.edu/query\"         # Query Manager\n",
-    "STORAGE = \"http://dldev.datalab.noao.edu/storage\"       # Storage Manager\n",
-    "RES     = \"http://dldev.datalab.noao.edu/res\"           # Resource Manager\n",
+    "AUTH    = \"http://dlsvcs.datalab.noao.edu/auth\"          # Auth Manager\n",
+    "QUERY   = \"http://dlsvcs.datalab.noao.edu/query\"         # Query Manager\n",
+    "STORAGE = \"http://dlsvcs.datalab.noao.edu/storage\"       # Storage Manager\n",
+    "RES     = \"http://dlsvcs.datalab.noao.edu/res\"           # Resource Manager\n",
     "\n",
     "def HTTP_CALL (mode, url, args, headers=None):\n",
     "    \"\"\"  Demo code to call an return a service URL.\n",
