--- a/How_to_use_the_Data_Lab_QueryManager.ipynb
+++ b/How_to_use_the_Data_Lab_QueryManager.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "## How to use the Data Lab *Query Manager* Service\n",
     "\n",
-    "*Revised: May 7, 2017*\n",
+    "*Revised: May 23, 2017*\n",
     "\n",
     "This notebook documents how to query the Data Lab via the query manager service. This can be done either from a Python script or from the command line using the <i>datalab</i> command.\n",
     "\n",
@@ -59,7 +59,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -83,13 +85,13 @@
      "output_type": "stream",
      "text": [
       "Account password: ········\n",
-      "Login token:   fitz.1007.1007.$1$o9HhivQp$KTNpE/qBGPqyuOYo2TlEM1\n"
+      "Login token:   demo00.1018.1018.$1$Orf0pq3.$Z8V7xvbuP/J5nZLzWr1rd0\n"
      ]
     }
    ],
    "source": [
     "# Get the security token for the datalab user\n",
-    "token = authClient.login ('fitz',getpass.getpass('Account password: '))\n",
+    "token = authClient.login ('demo00',getpass.getpass('Account password: '))\n",
     "if not authClient.isValidToken (token):\n",
     "    print ('Error: invalid user login (%s)' % token)\n",
     "else:\n",
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -191,9 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "etext: Error: edu.caltech.vao.vospace.VOSpaceException: edu.caltech.vao.vospace.VOSpaceException: edu.caltech.vao.vospace.VOSpaceException: Unable to set the last modification time for /net/dl1/vospace/users/fitz/zmags.csv\n",
-      "econtent: Error: edu.caltech.vao.vospace.VOSpaceException: edu.caltech.vao.vospace.VOSpaceException: edu.caltech.vao.vospace.VOSpaceException: Unable to set the last modification time for /net/dl1/vospace/users/fitz/zmags.csv\n",
-      "Error in query: Error: edu.caltech.vao.vospace.VOSpaceException: edu.caltech.vao.vospace.VOSpaceException: edu.caltech.vao.vospace.VOSpaceException: Unable to set the last modification time for /net/dl1/vospace/users/fitz/zmags.csv\n"
+      "OK\n"
      ]
     },
     {
@@ -202,7 +202,7 @@
        "<Response [204]>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
    "source": [
     "try:\n",
     "    response = queryClient.query (token, adql=query, fmt='csv', \n",
-    "                                  out='vos://zmags.csv')\n",
+    "                                  out='vos://zxmags.csv')\n",
     "except Exception as e:\n",
     "    # Handle any errors in the query.  By running this cell multiple times with the same\n",
     "    # output file, or by using a bogus SQL statement, you can view various error messages.\n",
@@ -222,8 +222,8 @@
     "        print (\"OK\")\n",
     "\n",
     "# Remove the file we just created, but list it first to show it exists\n",
-    "storeClient.ls (token, name='vos://zmags.csv')\n",
-    "storeClient.rm (token, name='vos://zmags.csv')"
+    "storeClient.ls (token, name='vos://zxmags.csv')\n",
+    "storeClient.rm (token, name='vos://zxmags.csv')"
    ]
   },
   {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -251,7 +251,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://dlsvcs.datalab.noao.edu/query/list?table=mydb://mags3\n",
       "OK\n"
      ]
     }
@@ -413,7 +412,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The thing to note in the output here are names such as '*GAVO*', '*SDSS-DR9*', etc;  These profiles refer to external TAP services that can be accessed using the Query Manager interface.  Only a few are configured at the moment as we work on ways to automatically discover the >100 such services and provide useful listings of what they contain, but let's see how we can query one and save the result to our Virtual Storage:"
    ]
