--- a/How_to_use_the_Data_Lab_StorageManager.ipynb
+++ b/How_to_use_the_Data_Lab_StorageManager.ipynb
@@ -59,7 +59,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
